			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02j: *********************************

BUG: (03/31/05, GVG) Cell expansion with several sublevels was not working.
FIX: Using rotateOutAboutTrueCenter instead of rotateOut

BUG: (03/31/05, GVG) Exception in output.JELIB if var == null and we are testing var.isParam();
FIX: var != null added

IMP: (03/30/05, SMR) Duplicating or copying arcs that share names keeps the sharing (Bug #190).

IMP: (03/30/05, GVG) Ability to change color in 3D background.

FIX: (03/30/05, JKG) fix situation where attribute on instance with same name of parameter
    on contents view would incorrectly not be marked as a parameter.

FIX: (03/30/05, JKG) TextUtils.formatDouble() made thread safe

IMP: (03/30/05, JKG) Added checking for conflicting logical effort parameters in designs

IMP: (03/30/05, SMR) Placing a large cell instance in an empty window zooms the window to fit (Bug #214).

BUG: (03/30/05, SMR) Shift-Right-click to zoom will zoom out if the area is too small (Bug #27).
FIX: In ClickZoomWireListener.mouseReleased(), use smarter determination of a point-click.

BUG: (03/30/05, SMR) "Duplicate Cell" does not default to the current cell (Bug #228).
FIX: In "CellBrowser.performAction()", call updateCellList() in the duplicate case.

BUG: (03/30/05, GVG) if tech is set to 4 or less metal layers, TechPalette still draws them.
FIX: getNodesGrouped() check notUsed nodes and arc and remove them from original matrix.

BUG: (03/29/05, SMR) GDS input doesn't handle orientation of instance arrays (AREF)
FIX: Use same method as single instances (SREF).

BUG (03/29/05, RK) NCC: Obtain VarContext from Current Window.

IMP: (03/29/05, RK) NCC: Superficial changes to names, etc.

IMP/MAN: (03/29/05, GVG) Icons in technology palette are arranged per layer Z position from bottom of the wafer.